[package]
name = "fernschreiber"
version = "0.2.2"
authors = ["Maximilian Güntner <maximilian@buzzn.net>"]

[dependencies]
rocket = "0.4.0"
multipart = "0.15.2"
encoding = "0.2.33"
chrono = "0.4"
mime = "^0.3"
tempfile = "3"
uuid = { version = "^0.6", features = ["v4"] }
native-tls = { version = "^0.2" }

[dependencies.lettre]
git = "https://github.com/buzzn/lettre.git"
rev = "acb4170a8887c552107d8c44f8fbfe743c175ba9"

[dependencies.lettre_email]
git = "https://github.com/buzzn/lettre.git"
rev = "acb4170a8887c552107d8c44f8fbfe743c175ba9"
